# abyss

./: .gitignore  COMMANDS.md  COMPARISON.md  Cargo.toml  INTEGRATIONS.md  LICENSE  README.md
.github/actions/abyss/: action.yml
.github/workflows/: pr-context.yml
benches/: full_scan.rs  tokenization.rs
npm/: package-lock.json  package.json
npm/scripts/: install.js
src/: config.rs  git.rs  lib.rs  main.rs  runner.rs
src/core/: mod.rs  scanner.rs  types.rs
src/format/: json.rs  markdown.rs  mermaid.rs  mod.rs  plain.rs
src/fs/: mod.rs
src/tui/: app.rs  highlight.rs  mod.rs  tree.rs  ui.rs
src/utils/: abyssignore.rs  ast.rs  binary.rs  bundle.rs  cache.rs  clipboard.rs  compression.rs  concepts.rs  dependencies.rs  git_stats.rs  graph.rs  hierarchy.rs  image.rs  impact.rs  mod.rs  pdf.rs  preflight.rs  privacy.rs  quality.rs  query.rs  rank.rs  summary.rs  tokens.rs  watch.rs
src/utils/analysis/: impact.rs  mod.rs  preflight.rs  quality.rs  query.rs  rank.rs
src/utils/compress/: compression.rs  hierarchy.rs  mod.rs
src/utils/integrations/: bundle.rs  diff_explainer.rs  mod.rs  watch.rs  workspace.rs
tests/: integration_test.rs  omnivore_test.rs
vscode-extension/: .vscodeignore  README.md  abyss-vscode-2.0.1.vsix  package-lock.json  package.json
vscode-extension/src/: extension.ts
