[package]
name = "abyss-cli"
version = "2.0.1"
edition = "2024"
description = "Semantic code compiler for LLM context - intelligently order and optimize codebases for AI consumption"
authors = ["KJ"]
license = "MIT"
publish = true
repository = "https://github.com/kj/abyss"
readme = "README.md"
keywords = ["llm", "context", "ai", "semantic-analysis", "code-intelligence"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[[bin]]
name = "abyss"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ignore = "0.4"
tiktoken-rs = "0.5"
anyhow = "1.0"
thiserror = "1.0"
git2 = "0.18"
tempfile = "3.10"
arboard = "3.3"
regex = "1.10"
url = "2.5"
lazy_static = "1.4"
ratatui = "0.26"
crossterm = "0.27"
crossbeam-channel = "0.5"
rayon = "1.8"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
streaming-iterator = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
dirs = "5.0"
md5 = "0.8.0"
dashmap = { version = "5.5", features = ["serde"] }
topological-sort = "0.2"
syntect = "5.0"
pdf-extract = "0.7"
image = "0.24"
glob = "0.3.3"
indicatif = "0.18.3"
clap_complete = "4.5.64"
notify = "6.1"
chrono = "0.4"
tar = "0.4"
flate2 = "1.0"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "tokenization"
harness = false

[[bench]]
name = "full_scan"
harness = false

[profile.bench]
debug = true

[profile.release]
lto = "thin"
codegen-units = 1
